--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Text Capital - Word Counter - Leter Counter</title>
     <link rel="icon" href="fevicon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
